--- a/templates/base.html
+++ b/templates/base.html
@@ -1,15 +1,30 @@
 <!DOCTYPE html>
 
-<html>
+{% if section is defined %}
+{% set self = section %}
+{% elif page %}
+{% set self = page %}
+{% else %}
+throw("couldn't find section or page")
+{% endif %}
+
+{% if self.extra.default_style is defined %}
+{% set style = self.extra.default_style %}
+{% else %}
+{% set style = "/default.css" %}
+{% }
+
+<html lang="{{ self.lang }}">
 
 <head>
-    <title> {%- block title %}nekodjin{% endblock title -%} </title>
+    <title> {%- block title %}{% endblock title -%} </title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="{{ style }}" type="text/css">
 </head>
 
 <body>
 {% block body %}
-{%endblock body %}
+{% endblock body %}
 </body>
 
 </html>
