--- a/sass/_colors.sass
+++ b/sass/_colors.sass
@@ -1,19 +1,27 @@
 // The Solarized color palette is here used under the
 // MIT license. Copyright Ethan Schoonover
 // ethanschoonover.com/solarized
-$dark0: #002b36
-$dark1: #073642
-$light0: #eee8d5
-$light1: #fdf6e3
-$cont0: #586e75
-$cont1: #657b83
-$cont2: #839496
-$cont3: #93a1a1
-$red: #dc322f
-$orange: #cb4b16
-$yellow: #b58900
-$green: #859900
-$cyan: #2aa198
-$blue: #268bd2
-$violet: #6c71c4
+
+// Dark Colors
+$dark0:   #002b36 // darker
+$dark1:   #073642 // lighter
+
+// Light Colors
+$light0:  #eee8d5 // darker
+$light1:  #fdf6e3 // lighter
+
+// Content Colors
+$cont0:   #586e75 // darker
+$cont1:   #657b83
+$cont2:   #839496
+$cont3:   #93a1a1 // lighter
+
+// Accent Colors
+$red:     #dc322f
+$orange:  #cb4b16
+$yellow:  #b58900
+$green:   #859900
+$cyan:    #2aa198
+$blue:    #268bd2
+$violet:  #6c71c4
 $magenta: #d33682
