--- a/sass/_sol_dark_palette.sass
+++ b/sass/_sol_dark_palette.sass
@@ -2,19 +2,15 @@
 // MIT license. Copyright Ethan Schoonover
 // ethanschoonover.com/solarized
 
-// Dark Colors
-$dark0:   #002b36 // darker
-$dark1:   #073642 // lighter
-
-// Light Colors
-$light0:  #eee8d5 // darker
-$light1:  #fdf6e3 // lighter
+// Background Colors
+$bg-primary:   #073642
+$bg-secondary: #002b36
 
 // Content Colors
-$cont0:   #586e75 // darker
-$cont1:   #657b83
-$cont2:   #839496
-$cont3:   #93a1a1 // lighter
+$content-0: #586e75 // darker
+$content-1: #657b83
+$content-2: #839496
+$content-3: #93a1a1 // lighter
 
 // Accent Colors
 $red:     #dc322f
@@ -25,3 +21,4 @@ $cyan:    #2aa198
 $blue:    #268bd2
 $violet:  #6c71c4
 $magenta: #d33682
+
