--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-{% extends "base.html" }
+{% extends "base.html" %}
 
 {% block title %}
 {{- self.title -}}
@@ -7,8 +7,9 @@
 {% block body %}
     <h1 class="title"> {{- self.title -}} </h1>
     <ul class="home-menu">
-    {% for elem in extra.menu %}
+    {% for elem in self.extra.menu %}
         <li><a href="{{ elem.1 }}">{{ elem.0 }}</a></li>
     {% endfor %}
     </ul>
 {% endblock body %}
+
