--- a/sass/_fonts.sass
+++ b/sass/_fonts.sass
@@ -1,10 +1,11 @@
 @mixin gfonts($f)
     @import url("http://fonts.googleapis.com/css?family=#{$f}")
 
-@mixin setfont($family, $weight: 300)
+@mixin setfont($family, $weight: 300, $size: 1em)
     font-family: $family
     font-weight: $weight
+    font-size:   $size
 
-@import gfonts("Roboto Sans")
-@import gfonts("Roboto Slab")
-@import gfonts("Roboto Mono")
+@include gfonts("Roboto")
+@include gfonts("Roboto Slab")
+@include gfonts("Roboto Mono")
