--- a/sass/_solarized_generic.sass
+++ b/sass/_solarized_generic.sass
@@ -9,7 +9,7 @@ body
     background-color: $bg-primary
     color: $content-1
 
-h1.title
+.home-title
     @include setfont("Roboto Slab", $size: 5rem)
     color: $content-0
     margin-top: 25vh
@@ -29,7 +29,7 @@ h1.title
         &:hover, &:focus
             color: $yellow
 
-h1.page-title
+.title
     @include setfont("Roboto Slab", $size: 4rem)
     color: $content-0
     margin-top: 5vh
