--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 {% endblock title %}
 
 {% block body %}
-    <h1 class="title"> {{- self.title -}} </h1>
+    <h1 class="home-title"> {{- self.title -}} </h1>
     <ul class="home-menu">
     {% for elem in self.extra.menu %}
         <li><a href="{{ elem.1 }}">{{ elem.0 }}</a></li>
