--- a/templates/page.html
+++ b/templates/page.html
@@ -5,7 +5,7 @@
 {% endblock title %}
 
 {% block body %}
-<h1 class="page-title"> {{- self.title -}} </h1>
+<h1 class="title"> {{- self.title -}} </h1>
 {{ self.content | safe }}
 {% endblock body %}
 
