--- a/sass/_fonts.sass
+++ b/sass/_fonts.sass
@@ -1,5 +1,6 @@
 @mixin gfonts($f)
-    @import url("http://fonts.googleapis.com/css?family=#{$f}")
+    @import url("http://fonts.googleapis.com/css2?family=#{$f}:wght@100..900")
+    @import url("http://fonts.googleapis.com/css2?family=#{$f}:ital,wght@100..900")
 
 @mixin setfont($family, $weight: 300, $size: 1em)
     font-family: $family
