--- a/sass/_solarized_generic.sass
+++ b/sass/_solarized_generic.sass
@@ -5,12 +5,12 @@
     transition: 190ms ease-in-out
 
 body
-    @include setfont("Roboto")
+    @include setfont("Roboto", 300)
     background-color: $bg-primary
     color: $content-1
 
 .home-title
-    @include setfont("Roboto Slab", $size: 5rem)
+    @include setfont("Roboto Slab", 300, 5rem)
     color: $content-0
     margin-top: 25vh
     margin-left: 25vw
@@ -22,7 +22,7 @@ body
     margin-left: 25vw
 
     li a
-        @include setfont("Roboto Slab", $size: 3rem)
+        @include setfont("Roboto Slab", 300, 3rem)
         color: $content-1
         text-decoration: none
 
@@ -30,7 +30,7 @@ body
             color: $yellow
 
 .title
-    @include setfont("Roboto Slab", $size: 4rem)
+    @include setfont("Roboto Slab", 300, 4rem)
     color: $content-0
     margin-top: 5vh
     margin-left: 20vw
@@ -38,12 +38,13 @@ body
     margin-bottom: 0
 
 body > *
-    @include setfont("Roboto", $size: 1.5rem)
+    @include setfont("Roboto", 300, 1.5rem)
     margin-left: 20vw
     margin-right: 20vw
     margin-bottom: 1vh
 
 strong
+    font-weight: 400
     color: $violet
 
 .z-code
