--- a/templates/base.html
+++ b/templates/base.html
@@ -8,18 +8,12 @@
 throw("couldn't find section or page")
 {% endif %}
 
-{% if self.extra.default_theme is defined %}
-{% set theme = self.extra.default_theme %}
-{% else %}
-{% set theme = "default" %}
-{% endif %}
-
 <html lang="{{ self.lang | safe }}">
 
 <head>
     <title> {%- block title %}{% endblock title -%} </title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="/{{ theme | safe }}.css" type="text/css">
+    <link rel="stylesheet" href="/{{ self.extra.theme | safe }}.css" type="text/css">
 </head>
 
 <body>
