--- a/sass/_fonts.sass
+++ b/sass/_fonts.sass
@@ -7,7 +7,7 @@
     font-size:   $size
 
 @include gfonts("Roboto")
-@include gfonts("Roboto", $ital: true)
+@include gfonts("Roboto", $italic: true)
 @include gfonts("Roboto", 300)
 @include gfonts("Roboto", 300, true)
 @include gfonts("Roboto Slab")
