--- a/sass/_fonts.sass
+++ b/sass/_fonts.sass
@@ -1,5 +1,5 @@
 @mixin gfonts($font, $weight: 400, $italic: false)
-    @import url("http://fonts.googleapis.com/css2?family=#{$font}:#{if($italic, "ital,", "")}wght@#{$weight}")
+    @import url("https://fonts.googleapis.com/css2?family=#{$font}:#{if($italic, "ital,", "")}wght@#{$weight}")
 
 @mixin setfont($family, $weight: 400, $size: 1em)
     font-family: $family
