add back button to pages

--- a/sass/_solarized_generic.sass
+++ b/sass/_solarized_generic.sass
@@ -37,6 +37,11 @@ body
     margin-right: 20vw
     margin-bottom: 0
 
+.back-button
+    @include setfont("Roboto Slab", 200, 1.2rem)
+    padding-left: 10px
+    color: $content-0
+
 body > *
     @include setfont("Roboto", 300, 1.5rem)
     margin-left: 20vw
