--- a/templates/page.html
+++ b/templates/page.html
@@ -6,6 +6,7 @@
 
 {% block body %}
 <h1 class="title"> {{- self.title -}} </h1>
+<a href=".." class="back-button">go back</a>
 {{ self.content | safe }}
 {% endblock body %}
 
