--- a/sass/_sol_light_palette.sass
+++ b/sass/_sol_light_palette.sass
@@ -22,3 +22,7 @@ $blue:    #268bd2
 $violet:  #6c71c4
 $magenta: #d33682
 
+// Generic Accent Colors
+$acc-complementary: $violet
+$acc-analagous:     $yellow
+
