--- a/sass/_solarized_generic.sass
+++ b/sass/_solarized_generic.sass
@@ -42,6 +42,13 @@ body
     padding-left: 10px
     color: $content-0
 
+footer
+    text-align: center
+    position: -webkit-sticky
+    position: sticky
+    bottom: 0
+    border-top: 2px solid $content-2
+
 body > *
     @include setfont("Roboto", 300, 1.5rem)
     margin-left: 20vw
