--- a/sass/_solarized_generic.sass
+++ b/sass/_solarized_generic.sass
@@ -46,7 +46,7 @@ footer
     text-align: center
     position: -webkit-sticky
     position: sticky
-    bottom: 0
+    bottom: 100vh
     border-top: 2px solid $content-2
 
 body > *
