--- a/sass/_solarized_generic.sass
+++ b/sass/_solarized_generic.sass
@@ -42,18 +42,21 @@ body
     padding-left: 10px
     color: $content-0
 
+body
+    min-height: 90vh
+
 footer
     text-align: center
-    position: -webkit-sticky
-    position: sticky
-    bottom: 100vh
     border-top: 2px solid $content-2
+    padding: 10px
+    height: 10vh
 
 body > *
     @include setfont("Roboto", 300, 1.5rem)
+    margin-top: 0.5vh
     margin-left: 20vw
     margin-right: 20vw
-    margin-bottom: 1vh
+    margin-bottom: 0.5vh
 
 strong
     font-weight: 400
