--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,7 @@ throw("couldn't find default theme")
     <footer>
         {% block footer %}
         <p>Last updated {{ now() | date(format="%A, %-d %B %Y") }}. View the source on <a href="https://github.com/nekodjin/website">GitHub</a>.</p>
-        {% enblock footer %}
+        {% endblock footer %}
     </footer>
     {% endblock body %}
 </body>
