--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@ throw("couldn't find default theme")
     {% block body %}
     <header>
         {% block header %}
-        <h1> {{- self.title -}} </h1>
+        <h1 class="title"> {{- self.title -}} </h1>
         <a href=".." class="back-button">go back</a>
         {% endblock header %}
     </header>
