Revert to c1995fd
This reverts commit f6a72c812e9d3cf9c3315b5c94c0cae39060011e.

Revert "Update 404.html"

This reverts commit e086e9ff979760a676c1f1b20a07b2707f2f6e4c.

Revert "Update base.html"

This reverts commit 50178af32562bb8c8545f8e0359d89a510144fdd.

Revert "Update page.html"

This reverts commit 0167a3b32cda57411ee0b49357f1e9ee94af4564.

Revert "Update base.html"

This reverts commit ae79ca7c8be9ad4cb0e885a222cfbc2f45f765b1.

Revert "Update index.html"

This reverts commit 1ab3d0755273b6ee3b41dc72ccef2ed3949b6511.

Revert "Update base.html"

This reverts commit b131ff3a9f44a5e8cbf2a01e43ff8f571b9e5127.

Revert "Update _solarized_generic.sass"

This reverts commit dd8f62e79d0ca3856dde4e717f6f882d03d54cf3.

Revert "Update _solarized_generic.sass"

This reverts commit 43d78a1fd46a60eb4a54eb6aa82159cfe28d65e9.

Revert "Update _solarized_generic.sass"

This reverts commit 14e58f0c2f92656f54fc2292d9a6fc2055894f76.

Revert "Update _solarized_generic.sass"

This reverts commit dabd004aa16cd30ae67603ca431dae88cec24410.

Revert "Update base.html"

This reverts commit c0765704ddd51525b3c37a96895ae30046c19048.

Revert "Update base.html"

This reverts commit c0665c0243b7df1c5e8dd2974c1460e75cee20d3.

Revert "Update index.html"

This reverts commit f8300a0838a242939160ad091a5653167f06ead0.

Revert "Merge pull request #10 from nekodjin/dev"

This reverts commit 3cbfb275118eebc76dd655151a0d5f7211bb5aca, reversing
changes made to c04292b32113e6dd1f4dddc23582e55a0485fe41.

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,30 +19,14 @@ throw("couldn't find default theme")
 <html lang="{{ self.lang | safe }}">
 
 <head>
-    <title> {%- block title %} {{- self.title -}} {% endblock title -%} </title>
+    <title> {%- block title %}{% endblock title -%} </title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="/{{ theme | safe }}.css" type="text/css">
 </head>
 
 <body>
-    {% block body %}
-    <header>
-        {% block header %}
-        <h1 class="title"> {{- self.title -}} </h1>
-        <a href=".." class="back-button">go back</a>
-        {% endblock header %}
-    </header>
-    <div id="content">
-        {% block content %}
-        {{ self.content | safe }}
-        {% endblock content %}
-    </div>
-    <footer>
-        {% block footer %}
-        <p>Last updated {{ now() | date(format="%A, %-d %B %Y") }}. View the source on <a href="https://github.com/nekodjin/website">GitHub</a>.</p>
-        {% endblock footer %}
-    </footer>
-    {% endblock body %}
+{% block body %}
+{% endblock body %}
 </body>
 
 </html>
